--- a/package.json
+++ b/package.json
@@ -30,5 +30,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "0.20.0",
+    "react-redux": "7.2.1",
+    "redux": "4.0.5",
+    "redux-thunk": "2.3.0"
   }
 }
